<resources>
    <string name="app_name">bioDIiversityOfUttarakhandMiniProject</string>
    <string name="first_logo">First Page logo Image</string>
    <string name="login_register">" To Login or Register click here"</string>
    <string name="to_login_or_register_click_here">To Login or Register click here</string>
    <string name="to_see_a_preface_click_here">To see a preface click here</string>
    <string name="registration_page">Registration Page</string>
    <string name="enter_your_email_here">Enter your email here</string>
    <string name="enter_your_password_here">Enter your password here</string>
    <string name="login">Login</string>
    <string name="already_registered_click_here_to_login">Already registered? Click here to Login</string>
    <string name="uttarakhand_bio_diversity_application">Uttarakhand Bio Diversity Application</string>
    <string name="home">Home</string>
    <string name="preface">Preface</string>
    <string name="about_uttarakhand">About Uttarakhand</string>
    <string name="register">Register</string>
    <string name="login_page">Login Page</string>
    <string name="not_registered_click_here_to_login">Not Registered? Click here to login</string>
    <string name="enter_password">Enter Password</string>
    <string name="logout">Logout</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="already_registered_login_page_here">Already Registered?? Login Page here</string>
    <string name="register_here">Register Here</string>
    <string name="images">Images</string>
    <string name="todo">TODO</string>
    <string name="oo">TODO</string>
    <string name="map_image_value">Map</string>
    <string name="fauna_in_the_region">Fauna in the region</string>
    <string name="flora_in_the_region">Flora in the region</string>
    <string name="map_of_the_region">Map of the region</string>
    <string name="flora_meaning">The word flora refers to the plants occurring within a given region as well as to the publication of scientific descriptions of those plants. In order to distinguish between the two, the word is often capitalized when a publication is meant. A Flora may contain anything from a simple list of the plants occurring in an area to a very detailed account of those plants. Floras are different from popular manuals in that they attempt to cover all of the plants, rather than only the most common or conspicuous ones.</string>
    <string name="what_is_flora">what is flora?</string>
    <string name="uttarakhand_flora">Uttarakhand comprises of 13 districts spreading over an area of 51,082 sq km, Floristically, it falls under the west Himalayan Biogeography zone and it is well-known for floral diversity similar to any other Himalayan region in the country with an estimated 4,000 species of flowering plants having great economic medicinal, aromatic and artistic value. The endemic plant wealth of Uttarakhand is worth mentioning as it ultimately forms part of the National heritage. Uttarakhand Himalayas have about 116 species asindigenous group. Are <i>naria ferruginea; Chimonobambusa jaunsarensis, Gentian tetrasepala, G. saginoides, Meeboldia solenoids, Microschoenus duthiei, Trachycarpus takil, Poa rhadina</i>, etc are some such species. Some of the most prominent flora in Uttarakhand are \n\n
    In Floral diversity point of view, Uttarakhand falls under the West Himalayan Biogeographic
zone, situated in the lap of the Himalaya their region is rich in forest wealth that ranges from
subtropical to Alpine types.The flora and vegetation of the state ranges from tropical deciduous
to alpine vegetation; broadly catagorised into three mazor types:\n\n
        <b> 1. Sub-Tropical Zone of Uttarakhan</b>\n
        The sub-tropical zone has pure as well as mixed forests of Shore Robusta (Sa I), the others
being Lannea coromandelica (Jhingan), Buchanania lanzan,
Dalbergia disso (Shisham), Haldina cordifolia (Haldu),
Syzygium cumini (Jamun), Mallotus philippinensis (Rohini),
Mitragyna parvifolia, Terminalia spp. (Myrobalans), Ficus spp.
(Figs), Macaranga pustulata, Callicarpa arborea,
Diopoknema butyracea (Chyura), Bauhinia variegate
(Kachnar), Bomb ax cobia (Semal), Lydia claying (Pula),
Schleicher oleos (Kokum), Holoptelea integrities (Karanj),
Cassia fistula (Amaltas), Nyctanthes arbor-tristis (Parijat),
Anogeissus latifolia (Bakli, Dhaura), etc. The shrubby vegetation is represented by Murraya
koenigii, Carissa opaca, Clerodendrum viscous, Adhatoda vasica, Jasminum multiflorum, Solanum
erianthum, Cal/icarpa macrophylla, Eranthemum nervosum, Phlogacanthus thyrsiformis, Jatropha
curcas, Rhus parviflora, Dodonaea viscosa, Woodfordia fruticosa and many others.\n\n

        <b> 2. Temperate Zone of Uttarakhand</b>\n
        The Temperate zone is marked by the presence of Quercus
leucotrichophora (Banj oak), Rhododendron arboretum (Burans), Myrica
esculent a (Kaphal), Leonia ovalifolia (Aynor), Ibex dipyrena, Quercus
semecarpifolia (Kharsu Oak), Q. dilatata (Moru Oak), etc. The coniferous
forests in this zone are unique. Pure stands of Pinus roxburghii (Chir Pine)
and Cadres deodar (Deodar, Cedar), Abides windrow (Raga), Pinus
wal/ichiana (Kail), Taxus wal/ichiana (Thuner, Himalayan Yew) at places
give a pristine look to the slopes. The slopes in temperate zone also have
insectivorous plants like Drosera peltata and species of Utricularia. Another
such species is Pinguicula alpina seen in Martoli Bugyal, Kumaon. The
Saprophytes and Parasites are also well represented by Monotropa
unit/ora, Dendrophthoe falcata (Banda), Balanophora in volucrata, and
species of Viscum, Korthalsella, Arceuthobium, Scurrula, etc. The zone has a
variety of useful plants, some of them well known for centuries. These include Cedrus deodar a,
Pinus spp., Abies pindrow, Quercus spp., Aconitum heterophyllum, Paeonia emodi, Swertia
chirayita, Bergenia ciliata, Dioscorea deltoidea, Angelica glauca (Choru), etc. \n\n

        <b> 3. Sub-Alpine and Alpine Zones of Uttarakhand</b>\n
        The altitude above 3,000 metres is generally considered a zone of sub-alpine and alpine
vegetation. The tree species are represented by Pinus wallichiana,
Abies pindrow, Prunus cornuta, Acer caesium, Betula utilis (Bhoj Patra)
and Salix sp. Species of the genera Cotoneaster, Rosa, Berberis,
Ribes, Junipers, Rhododendron anthropogenic, Rhododendron
campanulas are the shrubby components of the zone. The herbaceous
vegetation is represented by a number of species of genera Po
ten till, Primula, Aster, Saxifrage, Achaean, Delphinium,
Polygonal,Corydalis, Pleurospermum, Meconopsis, Pedicularis,
Saussurea, Rheum, Silene, etc. The Bugyals of this zone are well
known for a rich and diversified flora. Plant species like
Nardostachys grand flora (Jatamansi), Podophyllum hexandrum
(Himalayan May-Apple, Papri), Picrorhiza kurrooa (Kutaki), Gentian
burro, Armenia benthonic (Bal char), Rheum moorcroftianum
(Dole), Ephedra gerardiana, Dactylorhiza hatagirea (Hatthajari), etc., common in this zone, are
of immense medicinal value.
    </string>
    <string name="flora_in_uttarakhand">Flora in uttarakhand</string>
    <string name="state_flower_of_uttarakhand">State Flower of Uttarakhand</string>
    <string name="state_flower">Brahma Kamal, the state flower of Uttarakhand in India is one of the most famous flowers seen in the Himalayas. It is scientifically known as Saussurea obvallata which comes under Sunflower family, Asteraceae. This flower is the best example of the flowers and plant life in the alpine habitats at the upper reaches of the mountain ranges.


        <b><i>Saussurea obvallata</i></b>is a species of flowering plant in the Asteraceae. It is native to the Himalayas and Uttarakhand, India, northern Burma and southwest China. In the Himalayas, it is found at an altitude of around 4500 meters. It is the state flower of Uttarakhand. Saussurea obvallata is a perennial growing to 0.3 m (1 feet). The plant is small perennial herb growing up to 60 cm high. The flowers are hermaphrodite (have both male and female organs) and are pollinated by insects. Flowers bloom in mid-monsoon (July–August-September) among-st the rocks and grasses of the hillside at an attitudinal range of 3000–4800 meters.</string>
    <string name="etrass_flora">
        Rhododendron arboreum, the tree rhododendron, is an evergreen shrub or small tree with a showy display of bright red flowers. It is found in Bhutan, China, India, Myanmar, Nepal, Sri Lanka, Pakistan and Thailand. It is the national flower of Nepal. In India it is the state tree of Uttarakhand and state flower of Nagaland.
    </string>
    <string name="state_tree_of_uttarakhand">State tree of Uttarakhand</string>
    <string name="fauna">Fauna</string>
    <string name="flora_home">Home</string>
    <string name="contents_front_page">Contents</string>
    <string name="bio_reserves_in_uttrakhand">Bio Reserves in Uttrakhand</string>
    <string name="to_add_a_review_about_the_app_click_the_text">To add a review about the app click the text</string>
    <string name="valley_of_flowers_description">The Valley of Flowers trek is one of India’s most popular treks in the Himalayas. People who haven’t even stepped into the Himalayas, have heard about the Valley of Flowers trek.   But there is a solid reason behind Valley Of Flower’s legendary popularity – it is one of India’s oldest known treks.   In 1980, the Indian government created the Valley of Flowers National Park, and later in 2002, it was recognized as a UNESCO World Heritage Site. This pushed Valley of Flowers on the bucket list of trekkers from around the world.  Having said that, you must note that the Valley Of Flowers trek is not easy. It is a moderate level trek, with slightly longer trekking days and a steep ascent to Hemkund Sahib that will challenge your endurance. So, prepare well for this trek.
    Valley of Flowers from Dehradun opens up in June for everyone till the first week of October. It brings forth the best monsoon beauty that you will ever come across. It caters to the best vacation commitments that you make for a trip. Despite the break from the routine, it renders to mental and emotional satisfaction. Just as it comes with a magnetizing name Valley of Flowers , it smells refreshing and is the best to visit during the monsoon months of July and August. It also has several tourist locations that are a must-visit if one comes to this flower basket.
    Valley of flowers national park is located in Chamoli district in the state of Uttarakhand India. This is remotely located and it takes minimum 3 days to reach from Haridwar. The last motor-able point is Govindghat. Check our trek itinerary page for more day wise information. It is around 500 km from New Delhi and 300 km from Haridwar. Our page on how to reach, we have given distances between important points and time required between them, different modes of transportation available to reach here.
        It is located 300 Kms North of Rishikesh, near Badrinath. You need to Travel by Road till Govindghat and from there the trek to Valley of Flowers starts. Govindghat is 20 Kms before Badrinath. Till Govidghat there is a motor-able Road, now you can drive upto Pulna village. Rishikesh is 6 Hours Drive from New Delhi, India.</string>
    <string name="valley_of_flowers">Valley of flowers</string>
</resources>