<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".floraActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_is_flora"
                android:textAlignment="viewStart"
                android:textAllCaps="true"
                android:textColor="#43A047"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/flora_meaning"
                android:textColor="#2E7D32"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flora_in_uttarakhand"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#43A047"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/uttarakhand_flora"
                android:textColor="#2E7D32"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/state_flower_of_uttarakhand"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#43A047"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>
            <ImageView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitStart"
                android:src="@drawable/new_flora_image"
                android:contentDescription="@string/todo"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/state_flower"
                android:textColor="#2E7D32"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/state_tree_of_uttarakhand"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#43A047"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitStart"
                android:src="@drawable/tree_save"
                android:contentDescription="@string/todo"
                android:layout_marginTop="10dp"/>
            <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/etrass_flora"
            android:textColor="#2E7D32"
            android:textSize="16sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valley_of_flowers"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#43A047"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/valley_of_flowers_description"
                android:textColor="#2E7D32"
                android:textSize="16sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btFloraToHome"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#FF5722"
                    android:text="@string/flora_home"
                    android:textColor="#212121" />

                <Button
                    android:id="@+id/btFloraToFauna"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#FF5722"
                    android:text="@string/fauna"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>