<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background11"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvloginNregister"
        style="@style/front_text"
        android:layout_marginBottom="232dp"
        android:text="@string/to_login_or_register_click_here"
        android:textColor="#EAE7E8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvPreface"
        style="@style/front_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_see_a_preface_click_here"
        android:textColor="#FDF5F8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvloginNregister"
        app:layout_constraintVertical_bias="0.165" />

    <TextView
        android:id="@+id/textView3"
        style="@style/front_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uttarakhand_bio_diversity_application"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/tvloginNregister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233" />

</androidx.constraintlayout.widget.ConstraintLayout>